RESOLVED FIXED97629
http/tests/security/cross-frame-access-put.html failing on Mac WK2 bots after being unskipped
https://bugs.webkit.org/show_bug.cgi?id=97629
Summary http/tests/security/cross-frame-access-put.html failing on Mac WK2 bots after...
Beth Dakin
Reported 2012-09-25 21:23:39 PDT
http/tests/security/cross-frame-access-put.html was a skipped test until http://trac.webkit.org/changeset/129486 Now that is is unskipped, it is failing on the WK2 bots. It's possible that the failure is just a platform difference though since the test indicates that it is still passing. The diff is: --- /Volumes/Data/slave/lion-release-tests-wk2/build/layout-test-results/http/tests/security/cross-frame-access-put-expected.txt +++ /Volumes/Data/slave/lion-release-tests-wk2/build/layout-test-results/http/tests/security/cross-frame-access-put-actual.txt @@ -520,9 +520,9 @@ ALERT: PASS: window.personalbar should be '[object BarInfo]' and is. ALERT: PASS: window.plugins should be 'undefined' and is. ALERT: PASS: window.screen should be '[object Screen]' and is. -ALERT: PASS: window.screenLeft should be '0' and is. +ALERT: PASS: window.screenLeft should be '-10000' and is. ALERT: PASS: window.screenTop matched the expected value. -ALERT: PASS: window.screenX should be '0' and is. +ALERT: PASS: window.screenX should be '-10000' and is. ALERT: PASS: window.screenY matched the expected value. ALERT: PASS: window.scrollbars should be '[object BarInfo]' and is. ALERT: PASS: window.scrollX should be '0' and is.
Attachments
Patch (2.85 KB, patch)
2012-09-26 12:15 PDT, Beth Dakin
thorton: review+
Beth Dakin
Comment 1 2012-09-26 11:18:09 PDT
It looks like WebKitTestRunner is failing to use the fake window origin because _shouldUseFakeOrigin is NO when this test runs. That doesn't seem right.
Tim Horton
Comment 2 2012-09-26 11:23:00 PDT
(In reply to comment #1) > It looks like WebKitTestRunner is failing to use the fake window origin because _shouldUseFakeOrigin is NO when this test runs. That doesn't seem right. We should probably ditch _shouldUseFakeOrigin and just always use it (and initialize it to wherever we put the window initially).
Beth Dakin
Comment 3 2012-09-26 12:15:29 PDT
Beth Dakin
Comment 4 2012-09-26 13:26:00 PDT
Thanks Tim! Committed change: http://trac.webkit.org/changeset/129694
Note You need to log in before you can comment on or make changes to this bug.