https://bugs.webkit.org/show_bug.cgi?id=97629 http/tests/security/cross-frame-access-put.html failing on Mac WK2 bots after being unskipped

Reviewed by Tim Horton.

The test was failing because we were failing to use the fake window origin. We
should really always use the fake origin. This patch eliminates
_shouldUseFakeOrigin in favor of always using it.
* WebKitTestRunner/mac/PlatformWebViewMac.mm:
(-[WebKitTestRunnerWindow setFrameOrigin:]):
(-[WebKitTestRunnerWindow setFrame:display:animate:]):
(-[WebKitTestRunnerWindow setFrame:display:]):
(-[WebKitTestRunnerWindow frameRespectingFakeOrigin]):



Canonical link: https://commits.webkit.org/115707@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@129694 268f45cc-cd09-0410-ab3c-d52691b4dbfc