Tools/WebKitTestRunner/mac/PlatformWebViewMac.mm
@@ -33,7 +33,6 @@
 @interface WebKitTestRunnerWindow : NSWindow {
     WTR::PlatformWebView* _platformWebView;
     NSPoint _fakeOrigin;
-    bool _shouldUseFakeOrigin;
 }
 @property (nonatomic, assign) WTR::PlatformWebView* platformWebView;
 @end
@@ -49,7 +48,6 @@
 - (void)setFrameOrigin:(NSPoint)point
 {
     _fakeOrigin = point;
-    _shouldUseFakeOrigin = YES;
 }
 
 - (void)setFrame:(NSRect)windowFrame display:(BOOL)displayViews animate:(BOOL)performAnimation
@@ -57,7 +55,6 @@
     NSRect currentFrame = [super frame];
 
     _fakeOrigin = windowFrame.origin;
-    _shouldUseFakeOrigin = YES;
 
     [super setFrame:NSMakeRect(currentFrame.origin.x, currentFrame.origin.y, windowFrame.size.width, windowFrame.size.height) display:displayViews animate:performAnimation];
 }
@@ -67,7 +64,6 @@
     NSRect currentFrame = [super frame];
 
     _fakeOrigin = windowFrame.origin;
-    _shouldUseFakeOrigin = YES;
 
     [super setFrame:NSMakeRect(currentFrame.origin.x, currentFrame.origin.y, windowFrame.size.width, windowFrame.size.height) display:displayViews];
 }
@@ -75,11 +71,7 @@
 - (NSRect)frameRespectingFakeOrigin
 {
     NSRect currentFrame = [self frame];
-
-    if (_shouldUseFakeOrigin)
-        return NSMakeRect(_fakeOrigin.x, _fakeOrigin.y, currentFrame.size.width, currentFrame.size.height);
-
-    return currentFrame;
+    return NSMakeRect(_fakeOrigin.x, _fakeOrigin.y, currentFrame.size.width, currentFrame.size.height);
 }
 
 @end
